--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -140,6 +140,7 @@
   <string name="ConversationActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
   <string name="ConversationActivity_unblock_this_group_question">Desbloquear este grupo?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Volverá ser posible que recibas mensaxes e chamadas deste contacto.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Os membros existentes poderán engadirte ao grupo de novo.</string>
   <string name="ConversationActivity_unblock">Desbloquear</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">O anexo excede o límite para o tipo de mensaxe que estás a enviar.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Cámara non dispoñible</string>
@@ -153,6 +154,7 @@
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal necesita permiso para acceder á cámara e poder tirar fotografías, pero foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Cámara\".</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal necesita permiso para acceder á cámara e tirar fotografías ou facer vídeos.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
+  <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal non pode enviar SMS nin MMS porque non é a túa aplicación predefinida de SMS. Gustaríache cambiar isto nos axustes de Android?</string>
   <string name="ConversationActivity_yes">Si</string>
   <string name="ConversationActivity_no">Non</string>
   <!--ConversationAdapter-->
@@ -275,8 +277,18 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Disposto/a a un primeiro plano?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Agora podes compartir un nome e fotografía de perfil coas túas amizades en Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Os perfís de Signal xa están aquí</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Indicadores de escritura.</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Agora, opcionalmente, podes ver e compartir cando as mensaxes están a ser escritas.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Queres habilitalos agora?</string>
+  <string name="ExperienceUpgradeActivity_typing_ui_title">Xa temos aquí os indicadores de escritura</string>
+  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Habilita os indicadores de escritura</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Activa os indicadores de escritura</string>
   <string name="ExperienceUpgradeActivity_no_thanks">Non, grazas</string>
+  <string name="ExperienceUpgradeActivity_introducing_link_previews">Previsualizacións das ligazóns.</string>
+  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">As previsualizacións das ligazóns estás dispoñibles para algúns dos sitios máis populares da rede.</string>
+  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Podes habilitar ou deshabilitar esta funcionalidade en calquera momento nos axustes de Signal (Privacidade &gt; Enviar previsualizacións das ligazóns).</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Recuperando unha mensaxe...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Erro de comunicación permanente!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Non foi posible rexistrar Signal con Servizos de Google Play. As mensaxes e chamadas de Signal foron desactivadas; tenta volver facer o rexistro en Axustes&gt;Avanzado.</string>
@@ -329,6 +341,7 @@
   <string name="InviteActivity_no_app_to_share_to">Semella que non hai ningunha que permita compartir.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Non manteñas coas túas amizades conversas sen cifrar.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Traballando en segundo plano...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Erro ao enviar</string>
   <string name="MessageDetailsRecipient_new_safety_number">Novo número de seguranza</string>
@@ -365,8 +378,15 @@
   <string name="NotificationMmsMessageRecord_downloading_mms_message">Descargando mensaxe MMS</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Erro ao descargar a mensaxe MMS, toca para volver tentar</string>
   <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">Enviar a %s</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Toca para seleccionar</string>
+  <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+    <item quantity="one">Non podes compartir máis de %d elemento.</item>
+    <item quantity="other">Non podes compartir máis de %d elementos.</item>
+  </plurals>
   <!--MediaSendActivity-->
+  <string name="MediaSendActivity_add_a_caption">Engadir un título...</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Ficheiros multimedia</string>
   <!--MessageRecord-->
@@ -427,6 +447,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versión de Servizos de Google Play que tes instalada non funciona correctamente. Volve instalala e proba de novo.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Recuperando unha mensaxe...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Valorar esta app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se realmente che gusta esta aplicación, dedícalle, por favor, un intre a valorala.</string>
@@ -444,6 +465,7 @@
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Volverá ser posible que recibas mensaxes e chamadas deste contacto.</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_question">Desbloquear este grupo?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Os membros existentes poderán engadirte ao grupo de novo.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Erro ao abandonar o grupo</string>
   <string name="RecipientPreferenceActivity_unblock">Desbloquear</string>
   <string name="RecipientPreferenceActivity_enabled">Activado</string>
@@ -484,9 +506,13 @@
   <string name="RegistrationActivity_no_browser">Non é posible abrir esta ligazón. Non se atopou navegador ningún.</string>
   <string name="RegistrationActivity_more_information">Máis información</string>
   <string name="RegistrationActivity_less_information">Menos información</string>
-  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal necesita acceder aos teus contacto e ficheiros multimedia para contactar coas túas amizades, intercambiar mensaxes e facer chamadas seguras</string>
+  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal necesita acceder aos teus contactos e ficheiros multimedia para contactar coas túas amizades, intercambiar mensaxes e facer chamadas seguras</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Non é posible contactar co servizo. Comproba a túa conexión de rede e téntao de novo.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Para verificar dun xeito sinxelo o teu número, Signal pode detectar automaticamente o teu código de verificación se permites que acceda ás SMS.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Estás a %d pasos de enviar un informe de depuración.</item>
+    <item quantity="other">Estás a %d pasos de enviar un informe de depuración.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Erro ao gardar os cambios na imaxe</string>
   <!--Search-->
@@ -621,6 +647,7 @@
   <string name="QuickResponseService_problem_sending_message">Problema ao enviar a mensaxe!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Gardado en %s</string>
+  <string name="SaveAttachmentTask_saved">Gardado</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Procurar</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Buscar nas conversas, contactos e mensaxes</string>
@@ -630,6 +657,10 @@
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nova mensaxe</string>
   <!--TransferControlView-->
+  <plurals name="TransferControlView_n_items">
+    <item quantity="one">%d elemento</item>
+    <item quantity="other">%d elementos.</item>
+  </plurals>
   <!--UnauthorizedReminder-->
   <string name="UnauthorizedReminder_device_no_longer_registered">Dispositivo xa non rexistrado</string>
   <string name="UnauthorizedReminder_this_is_likely_because_you_registered_your_phone_number_with_Signal_on_a_different_device">Probablemente isto é así porque rexistraches o teu número de teléfono en Signal nun dispositivo diferente. Toca para volver facer o rexistro.</string>
@@ -938,6 +969,8 @@
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_multimedia_messages">Utilizar Signal para todas as mensaxes multimedia recibidas</string>
   <string name="preferences__pref_enter_sends_title">Tecla Intro para enviar</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Ao tocar na tecla Intro enviaranse as mensaxes</string>
+  <string name="preferences__send_link_previews">Enviar previsualizacións das ligazóns.</string>
+  <string name="preferences__previews_are_supported_for">Admítense previsualizacións de Imgur, Instagram, Reddit e YouTube</string>
   <string name="preferences__choose_identity">Elixir identidade</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Elixe os contactos da túa listaxe.</string>
   <string name="preferences__change_passphrase">Cambiar frase de acceso</string>
@@ -1007,6 +1040,8 @@
   <string name="preferences__incognito_keyboard">Teclado de incógnito</string>
   <string name="preferences__read_receipts">Confirmacións de lectura</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Se desactivas as confirmacións de lectura, non poderás ver as confirmacións dos demais.</string>
+  <string name="preferences__typing_indicators">Indicador de escritura</string>
+  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se os indicadores de escritura están desactivados non verás cando outras persoas está a escribir.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Solicitude de teclado para desactivar a aprendizaxe personalizada</string>
   <string name="preferences_app_protection__blocked_contacts">Contactos bloqueados</string>
   <string name="preferences_chats__when_using_mobile_data">Usando datos móbiles</string>
@@ -1032,6 +1067,11 @@
   <string name="preferences_chats__message_text_size">Tamaño da fonte</string>
   <string name="preferences_events__contact_joined_signal">Un contacto únese a Signal</string>
   <string name="preferences_notifications__priority">Prioridade</string>
+  <string name="preferences_communication__category_sealed_sender">Remitente selado</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Indicadores na pantalla</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Mostra unha icona de estado cando seleccionas \"Detalles da mensaxe\" nas mensaxes que foron entregadas utilizando o remitente selado.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Permitir de calquera</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Activa o remitente selado para as mensaxes entrantes de persoas que non estean nos teus contactos ou con aquelas coas que non compartiras o teu perfil.</string>
   <string name="preferences_communication__sealed_sender_learn_more">Saber máis</string>
   <!--****************************************-->
   <!--menus-->
