--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -3,7 +3,7 @@
   <string name="app_name">Signal</string>
   <string name="yes">Ja</string>
   <string name="no">Nee</string>
-  <string name="delete">Verwijderen</string>
+  <string name="delete">Wissen</string>
   <string name="please_wait">Even geduld…</string>
   <string name="save">Opslaan</string>
   <!--AbstractNotificationBuilder-->
@@ -17,12 +17,12 @@
     <item quantity="one">%d bericht per gesprek</item>
     <item quantity="other">%d berichten per gesprek</item>
   </plurals>
-  <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Nu alle oude berichten verwijderen?</string>
+  <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Nu alle oude berichten wissen?</string>
   <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
     <item quantity="one">Dit zal onmiddellijk alle gesprekken inkorten tot het laatste bericht.</item>
     <item quantity="other">Dit zal onmiddellijk alle gesprekken inkorten tot de laatste %d berichten.</item>
   </plurals>
-  <string name="ApplicationPreferencesActivity_delete">Verwijderen</string>
+  <string name="ApplicationPreferencesActivity_delete">Wissen</string>
   <string name="ApplicationPreferencesActivity_disable_passphrase">Wachtwoord uitschakelen?</string>
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Dit zal Signal- en berichtmeldingen blijvend ontgrendelen.</string>
   <string name="ApplicationPreferencesActivity_disable">Uitschakelen</string>
@@ -125,7 +125,7 @@
   <string name="ConversationActivity_message_is_empty_exclamation">Bericht is leeg!</string>
   <string name="ConversationActivity_group_members">Groepsleden</string>
   <string name="ConversationActivity_invalid_recipient">Ongeldige ontvanger!</string>
-  <string name="ConversationActivity_added_to_home_screen">Aan thuisscherm toevoegen</string>
+  <string name="ConversationActivity_added_to_home_screen">Aan thuisscherm toegevoegd</string>
   <string name="ConversationActivity_calls_not_supported">Bellen niet ondersteund</string>
   <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">Dit apparaat lijkt belacties niet te ondersteunen.</string>
   <string name="ConversationActivity_leave_group">Groep verlaten?</string>
@@ -164,12 +164,12 @@
   </plurals>
   <!--ConversationFragment-->
   <plurals name="ConversationFragment_delete_selected_messages">
-    <item quantity="one">Geselecteerd bericht verwijderen?</item>
-    <item quantity="other">Geselecteerde berichten verwijderen?</item>
+    <item quantity="one">Geselecteerd bericht wissen?</item>
+    <item quantity="other">Geselecteerde berichten wissen?</item>
   </plurals>
   <plurals name="ConversationFragment_this_will_permanently_delete_all_n_selected_messages">
-    <item quantity="one">Dit zal het geselecteerde bericht voorgoed verwijderen.</item>
-    <item quantity="other">Dit zal alle %1$d geselecteerde berichten voorgoed verwijderen.</item>
+    <item quantity="one">Dit zal het geselecteerde bericht voorgoed wissen.</item>
+    <item quantity="other">Dit zal alle %1$d geselecteerde berichten voorgoed wissen.</item>
   </plurals>
   <string name="ConversationFragment_save_to_sd_card">Opslaan?</string>
   <plurals name="ConversationFragment_saving_n_media_to_storage_warning">
@@ -182,19 +182,19 @@
   </plurals>
   <string name="ConversationFragment_unable_to_write_to_sd_card_exclamation">Opslag niet beschrijfbaar!</string>
   <plurals name="ConversationFragment_saving_n_attachments">
-    <item quantity="one">Bijlage opslaan</item>
-    <item quantity="other">%1$d bijlagen opslaan</item>
+    <item quantity="one">Bijlage aan het opslaan</item>
+    <item quantity="other">%1$d bijlagen aan het opslaan</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Bijlage opslaan...</item>
-    <item quantity="other">%1$d bijlagen opslaan…</item>
+    <item quantity="one">Bijlage aan het opslaan naar externe opslag...</item>
+    <item quantity="other">%1$d bijlagen aan het opslaan naar externe opslag…</item>
   </plurals>
   <string name="ConversationFragment_pending">In afwachting…</string>
   <string name="ConversationFragment_push">Gegevensoverdracht (Signal)</string>
   <string name="ConversationFragment_mms">Mms</string>
   <string name="ConversationFragment_sms">Sms</string>
-  <string name="ConversationFragment_deleting">Verwijderen</string>
-  <string name="ConversationFragment_deleting_messages">Berichten verwijderen…</string>
+  <string name="ConversationFragment_deleting">Aan het wissen</string>
+  <string name="ConversationFragment_deleting_messages">Berichten aan het wissen…</string>
   <string name="ConversationFragment_quoted_message_not_found">Oorspronkelijk bericht niet gevonden</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Het oorspronkelijke bericht is niet meer beschikbaar</string>
   <!--ConversationListActivity-->
@@ -202,12 +202,12 @@
   <!--ConversationListFragment-->
   <string name="ConversationListFragment_no_results_found_for_s_">Geen resultaten gevonden voor \'%s\'</string>
   <plurals name="ConversationListFragment_delete_selected_conversations">
-    <item quantity="one">Geselecteerd gesprek verwijderen?</item>
-    <item quantity="other">Geselecteerde gesprekken verwijderen?</item>
+    <item quantity="one">Geselecteerd gesprek wissen?</item>
+    <item quantity="other">Geselecteerde gesprekken wissen?</item>
   </plurals>
   <plurals name="ConversationListFragment_this_will_permanently_delete_all_n_selected_conversations">
-    <item quantity="one">Dit zal het geselecteerde gesprek voorgoed verwijderen.</item>
-    <item quantity="other">Dit zal alle %1$d geselecteerde gesprekken voorgoed verwijderen.</item>
+    <item quantity="one">Dit zal het geselecteerde gesprek voorgoed wissen.</item>
+    <item quantity="other">Dit zal alle %1$d geselecteerde gesprekken voorgoed wissen.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Verwijderen</string>
   <string name="ConversationListFragment_deleting_selected_conversations">Geselecteerde gesprekken aan het verwijderen…</string>
@@ -353,12 +353,12 @@
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
-    <item quantity="one">Geselecteerd bericht verwijderen?</item>
-    <item quantity="other">Geselecteerde berichten verwijderen?</item>
+    <item quantity="one">Geselecteerd bericht wissen?</item>
+    <item quantity="other">Geselecteerde berichten wissen?</item>
   </plurals>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="one">Dit zal het geselecteerde bericht voorgoed verwijderen.</item>
-    <item quantity="other">Dit zal alle %1$d geselecteerde berichten voorgoed verwijderen.</item>
+    <item quantity="one">Dit zal het geselecteerde bericht voorgoed wissen.</item>
+    <item quantity="other">Dit zal alle %1$d geselecteerde berichten voorgoed wissen.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Aan het verwijderen</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Berichten aan het verwijderen…</string>
@@ -614,8 +614,8 @@
   <string name="MediaPreviewActivity_draft">Concept</string>
   <string name="MediaPreviewActivity_signal_needs_the_storage_permission_in_order_to_write_to_external_storage_but_it_has_been_permanently_denied">Signal heeft toegang tot externe opslagruimte nodig om iets op te slaan op de externe opslag, maar deze toegang is permanent geweigerd. Ga naar de instellingen voor deze app, selecteer ‘Machtigingen’ en schakel ‘Opslagruimte’ in.</string>
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Kan niet opslaan naar externe opslag zonder machtiging</string>
-  <string name="MediaPreviewActivity_media_delete_confirmation_title">Bericht verwijderen?</string>
-  <string name="MediaPreviewActivity_media_delete_confirmation_message">Dit bericht zal voorgoed verwijderd worden.</string>
+  <string name="MediaPreviewActivity_media_delete_confirmation_title">Bericht wissen?</string>
+  <string name="MediaPreviewActivity_media_delete_confirmation_message">Dit bericht zal voorgoed gewist worden.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d nieuwe berichten in %2$d gesprekken</string>
   <string name="MessageNotifier_most_recent_from_s">Meest recente van: %1$s</string>
@@ -1019,8 +1019,8 @@
   <string name="preferences__mmsc_password">MMSC-wachtwoord</string>
   <string name="preferences__sms_delivery_reports">Sms-ontvangstbevestigingen</string>
   <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Vraag een ontvangstbevestiging voor ieder verzonden sms-bericht</string>
-  <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Verwijder automatisch oudere berichten wanneer een gesprek meer dan een bepaald aantal berichten bevat</string>
-  <string name="preferences__delete_old_messages">Verwijder oude berichten</string>
+  <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Wis automatisch oudere berichten wanneer een gesprek meer dan een bepaald aantal berichten bevat</string>
+  <string name="preferences__delete_old_messages">Wis oude berichten</string>
   <string name="preferences__chats">Gesprekken en media</string>
   <string name="preferences__conversation_length_limit">Gesprekslengtelimiet</string>
   <string name="preferences__trim_all_conversations_now">Oude berichten nu verwijderen</string>
@@ -1085,7 +1085,7 @@
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Berichtdetails</string>
   <string name="conversation_context__menu_copy_text">Tekst kopiëren</string>
-  <string name="conversation_context__menu_delete_message">Bericht verwijderen</string>
+  <string name="conversation_context__menu_delete_message">Bericht wissen</string>
   <string name="conversation_context__menu_forward_message">Bericht doorsturen</string>
   <string name="conversation_context__menu_resend_message">Bericht opnieuw verzenden</string>
   <string name="conversation_context__menu_reply_to_message">Bericht beantwoorden</string>
@@ -1098,7 +1098,7 @@
   <!--conversation_insecure-->
   <string name="conversation_insecure__invite">Uitnodigen</string>
   <!--conversation_list_batch-->
-  <string name="conversation_list_batch__menu_delete_selected">Geselecteerde verwijderen</string>
+  <string name="conversation_list_batch__menu_delete_selected">Geselecteerde gesprekken wissen</string>
   <string name="conversation_list_batch__menu_select_all">Alles selecteren</string>
   <string name="conversation_list_batch_archive__menu_archive_selected">Selectie archiveren</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Selectie dearchiveren</string>
@@ -1177,7 +1177,7 @@
   <!--Trimmer-->
   <string name="trimmer__deleting">Aan het verwijderen</string>
   <string name="trimmer__deleting_old_messages">Oude berichten aan het verwijderen…</string>
-  <string name="trimmer__old_messages_successfully_deleted">Oude berichten succesvol verwijderd</string>
+  <string name="trimmer__old_messages_successfully_deleted">Oude berichten succesvol gewist</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transportmethodepictogram</string>
   <string name="ConversationListFragment_loading">Bezig met laden…</string>
@@ -1215,9 +1215,9 @@
   <string name="BackupDialog_enable_local_backups">Lokale back-ups inschakelen?</string>
   <string name="BackupDialog_enable_backups">Back-ups inschakelen</string>
   <string name="BackupDialog_please_acknowledge_your_understanding_by_marking_the_confirmation_check_box">Vink het selectievakje aan om te verklaren dat je het begrijpt.</string>
-  <string name="BackupDialog_delete_backups">Back-ups verwijderen?</string>
-  <string name="BackupDialog_disable_and_delete_all_local_backups">Uitschakelen en alle lokale back-ups verwijderen?</string>
-  <string name="BackupDialog_delete_backups_statement">Back-ups verwijderen</string>
+  <string name="BackupDialog_delete_backups">Back-ups wissen?</string>
+  <string name="BackupDialog_disable_and_delete_all_local_backups">Uitschakelen en alle lokale back-ups wissen?</string>
+  <string name="BackupDialog_delete_backups_statement">Back-ups wissen</string>
   <string name="BackupDialog_copied_to_clipboard">Gekopieerd naar klembord</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal heeft toegang nodig tot de externe opslagruimte om back-ups te kunnen maken, maar deze is permanent geweigerd. Ga naar de instellingen voor deze app, selecteer ‘Machtigingen’ en schakel ‘Opslagruimte’ in.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Laatste back-up: %s</string>
