--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -288,6 +288,7 @@
   <string name="ExperienceUpgradeActivity_introducing_link_previews">Introducere link eksempelvisning</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Mulighed for eksempelvisning af links, er nu understøttet for de fleste populære sider på nettet</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Du kan når som helst aktivere eller deaktivere funktionaliteten, under Signal indstillinger (Privatliv &gt; Send link eksempelvisning)</string>
+  <string name="ExperienceUpgradeActivity_got_it">Modtaget</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Modtager en meddelelse...</string>
   <!--GcmRefreshJob-->
@@ -463,14 +464,14 @@
   <string name="RecipientPreferenceActivity_block_group">Blokér gruppen?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Du vil ikke længere modtage beskeder eller opdateringer fra gruppen</string>
   <string name="RecipientPreferenceActivity_block">Blokér</string>
-  <string name="RecipientPreferenceActivity_unblock_this_contact_question">Stop blokering af denne kontakt?</string>
-  <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Nu vil du igen, modtage beskeder og opkald fra denne kontakt</string>
+  <string name="RecipientPreferenceActivity_unblock_this_contact_question">Fjern blokering af kontakten?</string>
+  <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Du vil igen modtage beskeder og opkald fra kontakten</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_question">Fjern blokering af gruppen?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Eksisterende medlemmer vil kunne tilføje dig til gruppen igen</string>
-  <string name="RecipientPreferenceActivity_error_leaving_group">Der skete en fejl da du forlod gruppen</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Fejl opstod ved forsøg på at forlade gruppen</string>
   <string name="RecipientPreferenceActivity_unblock">Fjern blokering</string>
   <string name="RecipientPreferenceActivity_enabled">Aktiveret</string>
-  <string name="RecipientPreferenceActivity_disabled">Deaktiverét</string>
+  <string name="RecipientPreferenceActivity_disabled">Deaktiveret</string>
   <string name="RecipientPreferenceActivity_available_once_a_message_has_been_sent_or_received">Tilgengængelig når en besked er sendt eller modtaget</string>
   <!--RecipientProvider-->
   <string name="RecipientProvider_unnamed_group">Unavngivet gruppe</string>
