--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -287,6 +287,7 @@
   <string name="ExperienceUpgradeActivity_introducing_link_previews">Previsualizacións das ligazóns.</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">As previsualizacións das ligazóns estás dispoñibles para algúns dos sitios máis populares da rede.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Podes habilitar ou deshabilitar esta funcionalidade en calquera momento nos axustes de Signal (Privacidade &gt; Enviar previsualizacións das ligazóns).</string>
+  <string name="ExperienceUpgradeActivity_got_it">Entendo</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Recuperando unha mensaxe...</string>
   <!--GcmRefreshJob-->
