--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -273,6 +273,7 @@
   <string name="ExperienceUpgradeActivity_introducing_link_previews">リンクプレビューについて</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">リンクのプレビューは、主要なネットサービスに対応しています。</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">この機能は、Signalの設定（プライバシー &gt; リンクプレビューを送る）で有効化できます。</string>
+  <string name="ExperienceUpgradeActivity_got_it">分かりました</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">メッセージを読み込んでいます...</string>
   <!--GcmRefreshJob-->
