--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -287,6 +287,7 @@
   <string name="ExperienceUpgradeActivity_introducing_link_previews">Nieuw: voorbeeldweergaven.</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Voorbeeldweergaven worden nu optioneel ondersteund voor enkele van de populairste websites op het internet.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Je kan deze functionaliteit op eender welk moment in- of uitschakelen in je Signal-instellingen (Privacy &gt; Voorbeeldweergaven verzenden).</string>
+  <string name="ExperienceUpgradeActivity_got_it">Begrepen</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Bericht aan het ophalen…</string>
   <!--GcmRefreshJob-->
@@ -1020,7 +1021,7 @@
   <string name="preferences__sms_delivery_reports">Sms-ontvangstbevestigingen</string>
   <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Vraag een ontvangstbevestiging voor ieder verzonden sms-bericht</string>
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Wis automatisch oudere berichten wanneer een gesprek meer dan een bepaald aantal berichten bevat</string>
-  <string name="preferences__delete_old_messages">Wis oude berichten</string>
+  <string name="preferences__delete_old_messages">Oude berichten wissen</string>
   <string name="preferences__chats">Gesprekken en media</string>
   <string name="preferences__conversation_length_limit">Gesprekslengtelimiet</string>
   <string name="preferences__trim_all_conversations_now">Oude berichten nu verwijderen</string>
