Fix group string.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -382,7 +382,7 @@
     <string name="GroupMembersDialog_me">Me</string>
 
     <!-- CropImageActivity -->
-    <string name="CropImageActivity_group_avatar">@string/GroupCreateActivity_avatar_content_description</string>
+    <string name="CropImageActivity_group_avatar">Group avatar</string>
     <string name="CropImageActivity_profile_avatar">Avatar</string>
 
     <!-- InputPanel -->
